# CSST-DeCTI

./: .gitignore  LICENSE  README.md  baseline.sh  environment.yaml  main.py  pyproject.toml  requirements.txt
config/remove_j92t/: test.csv  train.csv  val.csv
data_provider/: data_factory.py  data_loader.py
decti/: __init__.py  decti.py  trainer.py  utils.py
decti/dataset/: __init__.py  loader.py  manager.py  transform.py
decti/model/: __init__.py  dectiabla.py  dncnn.py  model.py
models/: DeCTIAbla.py  DnCNN.py
pipeline/: exp_basic.py  exp_main.py
tests/: test_predict.py  test_train.py
utils/: tools.py
