[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = 'DeCTI'
dynamic = [
    'version'
]
description = 'A tool to correct image defects due to charge transfer inefficiency in CCD images.'
readme = 'README.md'
authors = [
    { name = 'Zehua Men', email = '' },
    { name = 'Li Shao', email = '' },
]
license = { file = 'LICENSE' }
requires-python = '>=3.11'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering'
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["decti", "decti.*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "decti._version.__version__" }
